# delphes-json

./: CMakeLists.txt  Makefile  pyproject.toml
delphes/: delphes.py  py2json.py  tcl2json.py  tcl2py.py
doc/: genMakefile.tcl
modules/: Delphes.cc
readers/: DelphesCMSFWLite.cpp  DelphesHepMC2.cpp  DelphesHepMC3.cpp  DelphesLHEF.cpp  DelphesSTDHEP.cpp
